fix chip vertical spacing when active

--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,8 @@ ul {
 /*Filter chips and tag styles*/
 .filter-div {
   display: inline-flex;
+  align-items: center;
+  margin: 5px;
 }
 
 /*Styles filter chips*/
@@ -70,7 +72,7 @@ label {
   border-radius: 20px;
   font-family: 'Archivo Black', sans-serif;
   font-size: 1rem;
-  margin: 5px;
+  margin: 0 5px;
   background-color: #453E4F;
   box-shadow: none;
   cursor: pointer;
@@ -78,12 +80,9 @@ label {
   color: white;
   display: inline-block;
   position: relative;
+  box-sizing: border-box;
 }
 
-/*Style checkboxes*/
-/* input[type=checkbox] {
-  appearance: none;
-} */
 
 .checkbox > span {
   padding: 0.5rem 0.25rem;
@@ -96,10 +95,8 @@ label {
 
 .checkbox > input:checked {
   border: none;
-  display: inline-block;
+  display: none;
   background-color: #e1b14c;
-  width: 5px;
-  height: 0px; 
 }
 
 .checkbox > input:checked + span::before {
@@ -107,10 +104,8 @@ label {
   display: inline-block;
   text-align: center;
   color: #41B883;
-  position: absolute;
   left: 0.3rem;
   top: 0.1rem;
-  font-size: 20px;
   
 }
 
@@ -123,6 +118,7 @@ label:hover {
   /* background-color: #cac4d1; */
   /* background-color: #ac80a0; */
   border: 3px solid blue;
+  
 }
 
 
